<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_interface"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_language"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/SpnLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/array_languages" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_hash_generator"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/ChbMD5"
                android:text="@string/md5"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/ChbSHA1"
                android:text="@string/sha_1"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/ChbSHA256"
                android:text="@string/sha_256"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/ChbSHA384"
                android:text="@string/sha_384"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/ChbSHA512"
                android:text="@string/sha_512"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/ChbCRC32"
                android:text="@string/crc32"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/BtnResetSettings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/BtnSaveSettings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

    </LinearLayout>

</LinearLayout>