<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codedead.deadline.deadhash.gui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/TxtFile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/card_file"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:id="@+id/layout_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TxtFile_text"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/EdtFile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:hint="@string/card_file_path" />

            <ImageButton
                android:id="@+id/ImgBtnFileData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:contentDescription="@string/card_open_folder"
                android:src="@drawable/ic_open_folder" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonGenerateFile"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/layout_file"
            android:text="@string/button_generate">

        </Button>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/file_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>